--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.8.2",
-    "@strapi/plugin-users-permissions": "4.8.2",
     "@strapi/plugin-i18n": "4.8.2",
-    "better-sqlite3": "8.0.1"
+    "@strapi/plugin-users-permissions": "4.8.2",
+    "@strapi/strapi": "4.8.2",
+    "better-sqlite3": "8.0.1",
+    "pg": "^8.10.0",
+    "pg-connection-string": "^2.5.0"
   },
   "author": {
     "name": "A Strapi developer"
@@ -23,7 +24,7 @@
     "uuid": "c098066e-aa5c-4a41-a7df-7b5e75ac7168"
   },
   "engines": {
-    "node": ">16.13.1",
+    "node": "16.13.1",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
